# Graph_MCP

./: .gitignore  CUSTOMER_TOOLS_GUIDE.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  README_sessions.md  RainMakersT3  USAGE_GUIDE.md  add_emily_pet.py  config.py  customer_intelligence_agent.py  cypher_query_examples.md  demo_mcp_tools.py  external_client_example.py  intelligent_session_analyzer.py  main.py  mcp_server_config.json  mcp_tools_demo.py  process_matt_orders.py  process_matt_orders_v2.py  process_matt_pets.py  pyproject.toml  query_all_pets.py  requirements.txt  run_matt_analysis.py  run_server.py  setup.sh  simple_query_pets.py  test_all_tools.py  test_customer_tools.py  test_queries.py  test_tools_simple.py  test_user_session_simple.py  verify_structure.py
data/orders/: order_cust_id_ 6180005.csv
data_graph/: customers.csv  pet_profile.csv
docs/: CUSTOMER_TOOLS_GUIDE.md  PUBLISHING.md  README_sessions.md  USAGE_GUIDE.md  cypher_query_examples.md
intelligence/: intelligent_session_analyzer.py  run_diego_analysis.py  run_intelligent_analysis.py  run_matt_analysis.py
intelligence/agents/: session_analysis_agent.py
scripts/data/: add_emily_customer.py  process_all_customers_pets.py  process_matt_orders.py  process_matt_orders_v2.py
src/: __init__.py  cli.py  populate_graph.py  server.py
src/agents/: __init__.py
src/database/: __init__.py  connection.py  queries.py
src/models/: __init__.py  base.py  pets.py  products.py  sessions.py  users.py  vets.py
src/tools/: __init__.py  base.py  connection_tools.py  customer_management_tools.py  pet_tools.py  query_tools.py  user_session_tools.py
src/utils/: validators.py
tests/: comprehensive_tests.py  test_session_analysis.py  test_tools_simple.py  test_user_session_tools.py
utilities/: quick_test.py  run_custom_query.py
