[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-mcp-tools"
version = "1.0.0"
description = "Neo4j MCP Server Tools - Connect agents to Neo4j databases with powerful query capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "neo4j", "database", "agent", "ai", "graph"]

dependencies = [
    "mcp>=1.0.0",
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
    "asyncio-mqtt>=0.16.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nbhuyyar-chwy/Graph_MCP"
Repository = "https://github.com/nbhuyyar-chwy/Graph_MCP.git"
Documentation = "https://github.com/nbhuyyar-chwy/Graph_MCP#readme"
Issues = "https://github.com/nbhuyyar-chwy/Graph_MCP/issues"

[project.scripts]
neo4j-mcp-server = "neo4j_mcp_tools.cli:main"

[project.entry-points."mcp.servers"]
neo4j = "neo4j_mcp_tools.server:create_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["neo4j_mcp_tools*", "src*"]

[tool.setuptools.package-dir]
"neo4j_mcp_tools" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 